--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,8 +2,13 @@
     background: cadetblue;
     padding: 20px 0;
     margin-bottom: 20px;
-    color: yellow;
     font-size: 32px;
+    display: flex;
+    align-items: center;
+}
+
+#header .topLine a {
+    color: yellow;
 }
 
 table {
@@ -161,4 +166,45 @@ td a:hover {
     padding: 0;
     margin: 0;
     font-size: 20px;
+}
+
+.success {
+    text-align: center;
+}
+
+.showAllTasks {
+    color: cadetblue;
+}
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logout,
+.login {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+}
+
+.logout span,
+.login span {
+    margin: 0 5px;
+    color: #ffffff;
+}
+
+.logout a span,
+.login a span {
+    color: burlywood;
+    font-size: 16px;
+}
+
+.home_page {
+    text-align: center;
+}
+
+.home_page b {
+    color: cadetblue;
 }
