--- a/src/main/resources/templates/task/info.html
+++ b/src/main/resources/templates/task/info.html
@@ -6,8 +6,9 @@
             <th width="1">№</th>
             <th width="20%">Название задания</th>
             <th width="20%">Описание</th>
-            <th width="20%">Дата создания</th>
-            <th width="20%">Статус</th>
+            <th width="15%">Дата создания</th>
+            <th width="15%">Статус</th>
+            <th width="15%">Приоритет</th>
             <th></th>
             <th></th>
             <th></th>
@@ -25,6 +26,7 @@
                 <span th:if="${task.done}">Выполнено</span>
                 <span th:unless="${task.done}">Не выполнено</span>
             </td>
+            <td th:text="${task.priority.name}"></td>
             <td class="act"><a th:if="${!task.done}" th:href="@{|/tasks/complete/${task.id}|}"><i class="fa fa-list" aria-hidden="true"></i>
             </a></td>
             <td class="act"><a th:href="@{|/tasks/edit/${task.id}|}"><i class="fa fa-pencil" aria-hidden="true"></i>
