--- a/src/main/resources/templates/task/all.html
+++ b/src/main/resources/templates/task/all.html
@@ -5,9 +5,10 @@
         <tr>
             <th width="1">№</th>
             <th width="20%">Название задания</th>
-            <th width="20%">Дата создания</th>
-            <th width="20%">Пользователь</th>
-            <th>Статус</th>
+            <th width="15%">Дата создания</th>
+            <th width="15%">Пользователь</th>
+            <th width="15%">Статус</th>
+            <th width="15%">Приоритет</th>
             <th></th>
         </tr>
         <tr th:each="task, custStat : ${tasks}">
@@ -19,6 +20,7 @@
                 <span th:if="${task.done}">Выполнено</span>
                 <span th:unless="${task.done}">Не выполнено</span>
             </td>
+            <td th:text="${task.priority.name}"></td>
             <td class="act">
                 <a th:href="@{|/tasks/info/${task.id}|}"><i class="fa fa-eye" aria-hidden="true"></i></a>
             </td>
