--- a/src/main/resources/templates/task/create.html
+++ b/src/main/resources/templates/task/create.html
@@ -8,6 +8,10 @@
         <label for="description">Описание задачи:
         </label>
         <textarea name="description" id="description" rows="5"></textarea>
+        <label for="priority.id">Приоритет:</label>
+        <select class="form-control" id="priority.id" name="priority.id">
+            <option th:each="priority : ${priorities}" th:value="${priority.id}" th:text="${priority.name}"></option>
+        </select>
         <button type="submit">Сохранить</button>
     </form>
 </div>
