--- a/src/main/resources/templates/task/edit.html
+++ b/src/main/resources/templates/task/edit.html
@@ -8,7 +8,13 @@
         <label for="description">Описание задачи:</label>
         <textarea name="description" id="description" th:placeholder="${task.description}" rows="5"
                   cols="33"></textarea>
-        <label for="priority.id">Приоритет:</label>
+        <label for="category.id">категории:</label>
+        <select class="form-control" id="category.id" name="category.id" multiple>
+            <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"
+                    th:if="${task.categories.contains(category)}" selected></option>
+            <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"
+                    th:if="${!task.categories.contains(category)}"></option>
+        </select><label for="priority.id">Приоритет:</label>
         <select class="form-control" id="priority.id" name="priority.id" th:field="*{priority.id}">
             <option th:each="priority : ${priorities}" th:value="${priority.id}" th:text="${priority.name}"></option>
         </select>
